@@ -204,7 +204,7 @@ class SSHAPITest extends FunSuite with ShouldMatchers {
     }
   }
   //==========================================================================================================
-  test("Utilities methods") {
+  test("helper methods") {
     val testfile="sshapitest.dummy"
     val testdir="sshapitest-dummydir"
     val now = new java.util.Date()
@@ -230,6 +230,12 @@ class SSHAPITest extends FunSuite with ShouldMatchers {
       cd()
       pwd                     should equal(homedir)
       findAfterDate(".", now) should have size(1)
+      sh.test("1 == 1")       should equal(true)
+      sh.test("1 == 2")       should equal(false)
+      isFile(testfile)        should equal(true)
+      isDirectory(testfile)   should equal(false)
+      exists(testfile)        should equal(true)
+      isExecutable(testfile)  should equal(false)
     }
   }
 }
